# evklid-site

./: README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  config_data.py  db_api.py  forms.py  models.py  parser.py  tasks.py  views.py
app/static/: scripts.js
app/static/assets/css/: style.css
app/templates/: base.html  index.html  login.html  oops.html  register.html  user_page.html
