[tool.poetry]
name = "evklid-site"
version = "0.1.0"
description = ""
authors = ["yelue <smirnov.art@ukr.net>"]

[tool.poetry.dependencies]
python = "^3.6"
flask-wtf = "^0.14.2"
flask_login = "^0.4.1"
passlib = "^1.7"
jinja2 = "^2.11"
sqlalchemy = "^1.3"
gunicorn = "^20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
